# recursive-filtering-code

./: CMakeLists.txt  LICENSE  README.md
DriverSrcLinux/: .MSRdrv.ko.cmd  .MSRdrv.mod.cmd  .MSRdrv.mod.o.cmd  .MSRdrv.o.cmd  .Module.symvers.cmd  .modules.order.cmd  MSRdrv.ko  MSRdrv.mod  MSRdrv.mod.c  modules.order
PMCTest/: AccTest.cpp  PMCTestA.cpp  PMCTestB.cpp  a.out  c64.sh
assembly code/: M_T16.cpp  M_T8.cpp  NT_ICC16.cpp  NT_ICC8.cpp  NT_ZIC16.cpp  NT_ZIC8.cpp  NT_icc.cpp  NT_zic.cpp  Option11_16.cpp  Option11_8.cpp  Option1_16.cpp  Option1_8.cpp  Option22_16.cpp  Option22_8.cpp  Option2_16.cpp  Option2_8.cpp  Option32_16.cpp  Option32_8.cpp  Option33_16.cpp  Option33_8.cpp  Option3_16.cpp  Option3_8.cpp  T_ICC16.cpp  T_ICC8.cpp  T_ZIC16.cpp  T_ZIC8.cpp  T_icc.cpp  T_zic.cpp  cascaded_option1.cpp  cascaded_option2.cpp  cascaded_option3.cpp  option1.cpp  option2.cpp  option3.cpp  permute4.cpp  permute8.cpp  readme.txt
cmake/: recursive_filterConfig.cmake.in
example/: README.md  filter.cpp
include/: compile_flag  compile_flag.cpp  filter.h  iir_cores.h  init_cond_correction.h  main  main.cpp  permuteV.h  recursive_filter.h  second_order_cores.h  series.h  shift_reg.h  test  test.cpp  zero_init_condition.h
include/recursive_filter/: filter.h  init_cond_correction.h  second_order_cores.h  shift_reg.h  zero_init_condition.h
notebook/: IIR_CR.ipynb  IIR_Function.ipynb  IIR_PH.ipynb  iir_function.py  iir_ph.py
test/: CMakeLists.txt  README.md  cascaded_option.cpp  filter.cpp  option.cpp  option1.cpp  series.cpp
